--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch>=2.0.0
 torchvision>=0.15.0
-opencv-python>=4.7.0
+opencv-python-headless>=4.7.0
 mediapipe>=0.10.0
 fastapi>=0.95.0
 uvicorn>=0.22.0
