--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 torch>=2.0.0
 torchvision>=0.15.0
 opencv-python-headless>=4.7.0
+mediapipe==0.10.9
+protobuf==3.20.3
 numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.2.0
